[#75774016] implemented methods for commodity accounts

--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -53,13 +53,13 @@
       <!-- /ko -->
       %tr.commodity_total_line
         %td Commodity total
-        %td.number_column{ data: { bind: "text: formattedChildrenBalance" }}
+        %td.number_column{ data: { bind: "text: formattedChildrenValue" }}
       %tr.cash_total_line
         %td Cash
-        %td.number_column{ data: { bind: "text: formattedBalance" }}
+        %td.number_column{ data: { bind: "text: formattedValue" }}
       %tr.account_total_line
         %td Total value
-        %td.number_column{ data: { bind: "text: formattedBalanceWithChildren" }}
+        %td.number_column{ data: { bind: "text: formattedValueWithChildren" }}
     %table.register{ cellspacing: 0, cellpadding: 0, data: { bind: "visible: transactionItemsVisible, attr: {id: 'transactions_' + id() }" }}
       %tr
         %th.number_column Date
