[#77716248] replace @total_current_value with Account#children_value

--- a/app/views/holdings/index.html.haml
+++ b/app/views/holdings/index.html.haml
@@ -18,7 +18,7 @@
       %td.number_column= format_currency(holding.total_gain_loss)
   %tr.commodity_total_line
     %td Commodity total
-    %td.number_column= format_currency(@total_current_value)
+    %td.number_column= format_currency(@account.children_value)
     %td &nbsp;
     %td &nbsp;
     %td &nbsp;
