[#77716248] #gain_loss & #unrealized_gains consolidated to #gains

--- a/app/views/lots/index.html.haml
+++ b/app/views/lots/index.html.haml
@@ -14,6 +14,6 @@
       %td.number_column= format_price(lot.price)
       %td.number_column= format_currency(lot.cost)
       %td.number_column= format_currency(lot.current_value)
-      %td.number_column= format_currency(lot.gain_loss)
+      %td.number_column= format_currency(lot.gains)
 .actions
   =link_to 'Back', account_holdings_path(@account.parent), class: 'back_button', title: 'Click here to return to the account holdings page.'
