--- a/app/views/holdings/index.html.haml
+++ b/app/views/holdings/index.html.haml
@@ -33,7 +33,7 @@
     %td.number_column= format_currency(@account.value_with_children)
     %td &nbsp;
     %td.number_column= format_currency(@account.children_cost)
-    %td.number_column= format_currency(@account.gain_with_children)
+    %td.number_column= format_currency(@account.gains_with_children)
 .actions
   =link_to 'Add', new_purchase_account_path(@account), class: 'add_button', title: 'Click here to purchase shares of a commodity.'
   =link_to 'Back', entity_accounts_path(@account.entity), class: 'back_button', title: 'Click here to return to the list of accounts.'
