[#75774016] finished up the holdings view in the single page

--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -54,12 +54,21 @@
       %tr.commodity_total_line
         %td Commodity total
         %td.number_column{ data: { bind: "text: formattedChildrenValue" }}
+        %td &nbsp;
+        %td &nbsp;
+        %td &nbsp;
       %tr.cash_total_line
         %td Cash
         %td.number_column{ data: { bind: "text: formattedValue" }}
+        %td &nbsp;
+        %td &nbsp;
+        %td &nbsp;
       %tr.account_total_line
         %td Total value
         %td.number_column{ data: { bind: "text: formattedValueWithChildren" }}
+        %td &nbsp;
+        %td.number_column{ data: { bind: "text: formattedCostWithChildren" }}
+        %td.number_column{ data: { bind: "text: formattedGainLossWithChildren" }}
     %table.register{ cellspacing: 0, cellpadding: 0, data: { bind: "visible: transactionItemsVisible, attr: {id: 'transactions_' + id() }" }}
       %tr
         %th.number_column Date
