--- a/app/views/pages/app/_holdings.html.haml
+++ b/app/views/pages/app/_holdings.html.haml
@@ -1,3 +1,4 @@
+=render 'pages/app/holding_form.html.haml'
 %table.register{ cellspacing: 0, cellpadding: 0, data: { bind: "visible: holdingsVisible, attr: {id: 'holdings_' + id()}" }}
   %tr
     %th Symbol
