[#79626882] added reconcile partial view

--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -17,6 +17,7 @@
             %li.clickable{ data: { bind: "click: showHoldings" }} Show Holdings
         =render 'pages/app/holdings'
         =render 'pages/app/transactions'
+        =render 'pages/app/reconcile'
       =render 'pages/app/validation'
       <!-- /ko -->
 
