[#79626882] adjusting reconcile view, correct api behavior

--- a/app/assets/stylesheets/single_page.css.scss
+++ b/app/assets/stylesheets/single_page.css.scss
@@ -83,6 +83,7 @@ table.nested_table {
     margin-right: 1em;
     margin-bottom: 1em;
   }
+  border-bottom: 1px solid black;
 }
 
 #account_details {
