--- a/app/views/pages/app/_reconcile.html.haml
+++ b/app/views/pages/app/_reconcile.html.haml
@@ -1,2 +1,2 @@
-#reconile{ data: { bind: "attr: { id: 'reconciliation_' + id() }" } }
+#reconile{ data: { bind: "attr: { id: 'reconciliation_' + id() }, visible: showReconciliation" } }
   %h3 Reconcile
