--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,20 +6,22 @@
     = stylesheet_link_tag    params[:controller], :media => "all"
     = javascript_include_tag "application"
     = javascript_include_tag params[:controller]
+    %meta{name: "viewport", content: "width=device-width, initial-scale=1"}
     = csrf_meta_tags
   %body
-    #header
-      %nav{role: "navigation"}
-        %ul#nav_1
-          -if user_signed_in?
-            %li= link_to "Single-page", app_path
-            %li= link_to "Home", home_path
-            %li= link_to "Entities", entities_path
-            %li= link_to "Sign out", destroy_user_session_path, :method => :delete
-          -else
-            %li= link_to "Sign in", new_user_session_path
-        -if content_for? :secondary_nav
-          =yield :secondary_nav
-    #content
-      = render "shared/flash", :flash => flash
-      = yield
+    .container-fluid
+      #header
+        %nav{role: "navigation"}
+          %ul#nav_1
+            -if user_signed_in?
+              %li= link_to "Single-page", app_path
+              %li= link_to "Home", home_path
+              %li= link_to "Entities", entities_path
+              %li= link_to "Sign out", destroy_user_session_path, :method => :delete
+            -else
+              %li= link_to "Sign in", new_user_session_path
+          -if content_for? :secondary_nav
+            =yield :secondary_nav
+      #content
+        = render "shared/flash", :flash => flash
+        = yield
