--- a/app/views/pages/app/_accounts.html.haml
+++ b/app/views/pages/app/_accounts.html.haml
@@ -1,16 +1,17 @@
-#account_container{ data: { bind: "with: selectedEntity()" }}
-  %table.list#accounts_table{ cellspacing: 0, cellpadding: 0}
-    %tr
-      %th Name
-      %th Balance
-      %th
-        %a.small_header_add_button{ href: '#', title: 'Click here to add a new account.', data: { bind: "click: newAccount" } }Add
-    <!-- ko foreach: groupedAccounts -->
-    %tr{ data: { bind: "css: cssClass" }}
-      %td{ data: { bind: "click: display" }}
-        %span{ data: { bind: "text: name, css: cssClass" }}
-      %td.number_column{ data: { bind: "text: formattedValueWithChildren,click: display" }}
-      %td.action_cell
-        %a.small_edit_button{ data: { bind: "visible: canEdit(), click: edit" }, href: '#', title: 'Click here to edit this account.' } Edit
-        %a.small_delete_button{ data: { bind: "visible: canDestroy(), click: destroy" }, href: '#', title: 'Click here to delete this account.' } Delete
-    <!-- /ko -->
+#account_container.row{ data: { bind: "with: selectedEntity()" }}
+  .col-md-12
+    %table.list#accounts_table{ cellspacing: 0, cellpadding: 0}
+      %tr
+        %th Name
+        %th Balance
+        %th
+          %a.small_header_add_button{ href: '#', title: 'Click here to add a new account.', data: { bind: "click: newAccount" } }Add
+      <!-- ko foreach: groupedAccounts -->
+      %tr{ data: { bind: "css: cssClass" }}
+        %td{ data: { bind: "click: display" }}
+          %span{ data: { bind: "text: name, css: cssClass" }}
+        %td.number_column{ data: { bind: "text: formattedValueWithChildren,click: display" }}
+        %td.action_cell
+          %a.small_edit_button{ data: { bind: "visible: canEdit(), click: edit" }, href: '#', title: 'Click here to edit this account.' } Edit
+          %a.small_delete_button{ data: { bind: "visible: canDestroy(), click: destroy" }, href: '#', title: 'Click here to delete this account.' } Delete
+      <!-- /ko -->
