adjusted the header padding

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -39,12 +39,7 @@ a {
 
 #header {
   margin: 0;
-  padding: {
-    left: 2em;
-    right: 1em;
-    top: 1em;
-    bottom: 1em;
-  }
+  padding: .3em;
   box-shadow: 0em .5em .2em $shadow-color;
 }
 
