--- a/app/views/pages/app/_reconcile.html.haml
+++ b/app/views/pages/app/_reconcile.html.haml
@@ -14,15 +14,15 @@
         .form-group
           %label Previous balance
           %br
-          %span{ data: { bind: 'text: previous_balance' }  }
+          %span{ data: { bind: 'text: formatted_previous_balance' }  }
         .form-group
           %label{ for: 'closing_balance_text' } Closing balance
-          %input#closing_balance_text.form-control{ type: 'text', data: { bind: 'value: closing_balance' } }
+          %input#closing_balance_text.form-control{ type: 'text', data: { bind: 'value: formatted_closing_balance' } }
       .col-md-4
         .form-group
           %label Reconcilied balance
           %br
-          %span{ data: { bind: 'text: reconciled_balance' } }
+          %span{ data: { bind: 'text: formatted_reconciled_balance' } }
         .form-group
           %label Difference
           %br
@@ -42,7 +42,7 @@
             %td{ data: { bind: "text: description" } }
             %td.number_column{ data: { bind: "text: formatted_amount" } }
             %td
-              %input{ type: "checkbox", data: { bind: "value: selected" } }
+              %input{ type: "checkbox", data: { bind: "checked: selected" } }
           <!-- /ko -->
       .col-md-6
         Credits
@@ -58,5 +58,5 @@
             %td{ data: { bind: "text: description" } }
             %td.number_column{ data: { bind: "text: formatted_amount" } }
             %td
-              %input{ type: "checkbox", data: { bind: "value: selected" } }
+              %input{ type: "checkbox", data: { bind: "checked: selected" } }
           <!-- /ko -->
