[#79626882] use bootstrap alert classes

--- a/app/views/pages/app/_notifications.html.haml
+++ b/app/views/pages/app/_notifications.html.haml
@@ -1,4 +1,4 @@
 #notifications
   <!-- ko foreach: notifications -->
-  %div{ data: { bind: "css: type, html: message" }}
+  .alert{ data: { bind: "css: 'alert-' + type, html: message" }}
   <!-- /ko -->
