--- a/app/views/pages/app/_holding_form.html.haml
+++ b/app/views/pages/app/_holding_form.html.haml
@@ -4,28 +4,28 @@
     %div
       %label{ for: 'new_commodity_transaction_transaction_date' } Symbol
       %br
-      %input#new_commodity_transaction_transaction_date.date_field{ type: 'text', data: { bind: "value: formattedTransactionDate" }}
+      %input#new_commodity_transaction_transaction_date.date_field.form-control{ type: 'text', data: { bind: "value: formattedTransactionDate" }}
     %div
       %label{ for: 'new_commodity_transaction_action' } Action
       %br
-      %select#new_commodity_transaction_action{ data: { bind: "value: action" }}
+      %select#new_commodity_transaction_action.form-control{ data: { bind: "value: action" }}
         %option buy
         %option sell
     %div
       %label{ for: 'new_commodity_transaction_symbol' } Symbol
       %br
-      %input#new_commodity_transaction_symbol{ data: { bind: "value: symbol" }}
+      %input#new_commodity_transaction_symbol.form-control{ data: { bind: "autocomplete: symbol, source: getCommoditySymbols" }}
     %div
       %label{ for: 'new_commodity_transaction_shares' } Shares
       %br
-      %input#new_commodity_transaction_shares.number_field{ data: { bind: "value: shares" }}
+      %input#new_commodity_transaction_shares.form-control.number_field{ data: { bind: "value: shares" }}
     %div
       %label{ for: 'new_commodity_transaction_value' } Value
       %br
-      %input#new_commodity_transaction_value.number_field{ data: { bind: "value: value" }}
+      %input#new_commodity_transaction_value.form-control.number_field{ data: { bind: "value: value" }}
     %div
       %label{ for: 'new_commodity_transaction_price' } Price per share
       %br
       %span#new_commodity_transaction_price{ data: { bind: "text: price" }}
     .actions
-      %button{ data: { bind: "click: save" }} Save
+      %button.save_button{ data: { bind: "click: save" }} Save
